[package]
authors = ["Lit Protocol Developers"]
categories = ["cryptography"]
description = "OpenFHE Development in rust"
edition = "2024"
exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
homepage = "https://crates.io/crates/openfhe-development-rs"
keywords = ["openfhe", "homomorphic", "encryption"]
license = "BSD-2"
name = "openfhe-development-rs"
readme = "README.md"
repository = "https://github.com/LIT-Protocol/openfhe-development-rs"
version = "0.1.0"

[features]

[dependencies]

[dev-dependencies]