[package]
authors = ["Lit Protocol Developers"]
categories = ["cryptography"]
description = "OpenFHE Development in rust"
edition = "2024"
exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
homepage = "https://crates.io/crates/openfhe-development-rs"
keywords = ["openfhe", "homomorphic", "encryption"]
license = "BSD-2"
name = "openfhe-development-rs"
readme = "README.md"
repository = "https://github.com/LIT-Protocol/openfhe-development-rs"
version = "0.1.0"

[features]

[dependencies]
base64ct = "1"
blake2 = "0.10"
rand = { version = "0.9", features = ["thread_rng"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]