[package]
authors = ["Lit Protocol Developers"]
categories = ["cryptography"]
description = "OpenFHE Development in rust"
edition = "2024"
exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
homepage = "https://crates.io/crates/openfhe-development-rs"
keywords = ["openfhe", "homomorphic", "encryption"]
license = "BSD-2"
name = "openfhe-development-rs"
readme = "README.md"
repository = "https://github.com/LIT-Protocol/openfhe-development-rs"
version = "0.1.0"

[features]

[dependencies]
base64ct = "1"
bitflag = "0.10"
blake2 = "0.10"
crypto-bigint = { version = "0.6", features = ["hybrid-array"] }
derive_more = { version = "2.0", features = ["debug", "display", "from", "from_str", "into", "try_from", "try_into", "try_unwrap", "unwrap"] }
num = "0.4"
probability = "0.20"
rand = { version = "0.9", features = ["thread_rng"] }
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]